test/compile-fail/resolution/use/super-super/expected.txt
error: there are too many leading `super` keywords
  ┌─ ./test/compile-fail/resolution/use/super-super/top.rhdl:2:16
  │
2 │     use super::super::*;
  │                ^^^^^ goes beyond the crate root
  │
  = try removing that `super` from the path

